@@ -1,0 +1,306 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u6771\u4eac10\u6708\u760b\u72c2\u6d3b\u52d5\uff01\u842c\u8056\u7bc0\u89d2\u8272\u626e\u6f14\u3001\u8c93\u54aa\u611b\u597d\u8005\u5e02\u5834\u3001\u6771\u4eac\u5854\u71ed\u5149\u6d3b\u52d5\u7b49\u4f60\u4f86", "description": "\u6771\u4eac10\u6708\u760b\u72c2\u6d3b\u52d5\uff01\u842c\u8056\u7bc0\u89d2\u8272\u626e\u6f14\u3001\u8c93\u54aa\u611b\u597d\u8005\u5e02\u5834\u3001\u6771\u4eac\u5854\u71ed\u5149\u6d3b\u52d5\u7b49\u4f60\u4f86", "url": "https://www.famechos.me/news/\u6771\u4eac10\u6708\u760b\u72c2\u6d3b\u52d5\uff01\u842c\u8056\u7bc0\u89d2\u8272\u626e\u6f14\u3001\u8c93\u54aa\u611b\u597d\u8005\u5e02\u5834\u3001\u6771\u4eac\u5854\u71ed\u5149\u6d3b\u52d5\u7b49\u4f60\u4f86.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-22T14:20:09.850724+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/東京10月瘋狂活動！萬聖節角色扮演、貓咪愛好者市場、東京塔燭光活動等你來.html"/>
+<meta name="description" content="東京10月瘋狂活動！萬聖節角色扮演、貓咪愛好者市場、東京塔燭光活動等你來。探索東京10月的精彩活動，萬聖節角色扮演、貓咪愛好者市場、東京塔燭光活動等，讓你體驗東京獨特的文化魅力。">
+
+<meta name="keywords" content="東京10月活動、萬聖節角色扮演、貓咪愛好者市場、東京塔燭光活動、東京旅遊、東京文化、萬聖節慶祝">
+
+<link rel="stylesheet" href="../main-nav.css">
+<link rel="stylesheet" href="../main-content.css">
+<link rel="stylesheet" href="../main-small.css">
+<link rel="stylesheet" href="../post.css">
+<link rel="stylesheet" href="../main-footer.css">
+<link rel="stylesheet" href="../news.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/東京10月瘋狂活動！萬聖節角色扮演、貓咪愛好者市場、東京塔燭光活動等你來.html" />
+        <meta property="og:title" content="東京10月瘋狂活動！萬聖節角色扮演、貓咪愛好者市場、東京塔燭光活動等你來" />
+        <meta property="og:description" content="東京10月瘋狂活動！萬聖節角色扮演、貓咪愛好者市場、東京塔燭光活動等你來" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="東京10月瘋狂活動！萬聖節角色扮演、貓咪愛好者市場、東京塔燭光活動等你來" />
+        <meta property="twitter:description" content="東京10月瘋狂活動！萬聖節角色扮演、貓咪愛好者市場、東京塔燭光活動等你來" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+<meta property="og:type" content="article" />
+<meta name="robots" content="index, follow" />
+<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+         
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+         
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+     
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>東京10月瘋狂活動！萬聖節角色扮演、貓咪愛好者市場、東京塔燭光活動等你來</h1>
+</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">Others</p>
+          <p class="news-date">22/10/2024</p>
+        </div>
+<p>東京在萬聖節前的周末將舉行多個活動，包括派對、角色扮演和遊行。此外，秋季還帶來了美食節和茶道儀式。貓咪愛好者可以參加貓咪愛好者的市場，而東京塔將舉行燭光活動。</p>
+<h2>秋季限定：東京夜市的魅力</h2>
+<p>東京夜市是一個為期一周的活動，於代代木公園舉行。活動包括現場表演、藝術展覽和銷售當地手工藝品的攤位。遊客可以在樹蔭下漫步，體驗東京的魅力和文化。</p>
+<h2>品嚐東京的美食盛事</h2>
+<p>東京美食節是一個以美食為主的盛大節日，於東京舉行。活動由東京グロウン（Tokyo Grown）組織，旨在分享東京農業、林業和海洋產業的美食和產品，以及來自日本和世界各地的美食和飲料。</p>
+<h2>The Nihonbashi Kyobashi Quarter</h2>
+<p>日本橋京橋節是一個慶祝日本橋高速公路的節日。活動的主要部分是沿著中央通り（Chūō Dōri）舉行的遊行，這是東京最繁忙的街道之一。展示將包括3,000名舞蹈演員和表演者。</p>
+<h2>Experience the Grandeur of Tokyo's Great Tea Ceremony</h2>
+<h2>探索江戶東京建築博物館的茶道展覽</h2>
+<p>江戶東京建築博物館和濱離宮恩賜庭園將連續兩個周末舉行茶道展，展示日本獨特的文化資產。</p>
+<ul>
+<li>日期：10月19-20日、10月26-27日</li>
+<li>地點：江戶東京建築博物館、濱離宮恩賜庭園</li>
+</ul>
+<h2>南瓜遊行表參道萬聖節盛典</h2>
+<p>表參道/原宿哈囉萬聖節南瓜遊行是兒童的萬聖節活動，成人也可以參加。活動包括糖果或禮物派發，和幾位著名名人的參加。</p>
+<ul>
+<li>日期：10月</li>
+<li>地點：表參道/原宿</li>
+<li>預售票：¥1,000</li>
+</ul>
+<h2>Experience the Unique Charm of Koenji</h2>
+<p>高円寺節是社區活動，包括美食、音樂和兒童活動。活動在JR高円寺站附近舉行。</p>
+<ul>
+<li>日期：10月最後一個周末</li>
+<li>地點：JR高円寺站附近</li>
+</ul>
+<h2>萬聖節角色扮演盛事登陸池袋</h2>
+<p>池袋萬聖節角色扮演節是萬聖節活動，歡迎角色扮演愛好者參加。</p>
+<h2>動漫文化在池袋的盛況</h2>
+<p>池袋是日本動漫文化的重要中心，對於引進的年度節日採取了稍微更日本化的做法。與其他地方相比，人們更有可能打扮成自己喜愛的漫畫或動漫角色，而不是更恐怖的服裝。</p>
+<h2>Celebrating Nyan Fes: 20th Edition</h2>
+<p>在日語中，"nyan"是貓的叫聲，但這個節日（由貓愛好者為貓愛好者舉辦）也會讓很多人發出滿意的貓叫聲。屆時將有400個攤位出售與貓相關的產品，包括海報、畫作、馬克杯、帶有小貓的連指手套等。</p>
+<table>
+<tr>
+<th>票價</th>
+<th>預售票</th>
+<th>現場票</th>
+</tr>
+<tr>
+<td>¥600</td>
+<td>¥500</td>
+</tr>
+</table>
+<h2>攝影展：東京街頭風情</h2>
+<p>這個免費的藝術展覽展示了30多位才華橫溢的街頭攝影師的作品。在涉谷的Gallery Conceal親身體驗每位攝影師的獨特視角和創作過程。</p>
+<h2>Candle Days at Tokyo Tower</h2>
+<p>在東京最著名的地標之一的底部欣賞日本的蠟燭工藝。東京塔的燈光將因其底部的數百根蠟燭而更加閃耀。Tokyo Tower Candle Days將呈現從傳統表演藝術到名人小組等一切內容。</p>
+<h2>Step Back in Time to the Showa Retro Market</h2>
+在昭和復古市場，日本的復古遊戲全面展開，銷售昭和時代的玩具、服裝和家具。你將找到銷售從復古音樂到海報和家電等一切商品的攤位。<h2>東京頹廢豪華萬聖節</h2>
+<p>一年一度的東京頹廢萬聖節又回來了！這個盛大的慶祝活動將匯聚DJ、舞者、惡魔、滑稽表演、變裝表演和魔術等精彩內容，保證讓你忙個不停！</p>
+<p>門票價格：¥500（現場購票）</p>
+
+<p>資料來源：Tokyo Cheapo</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/DAmXcvHlIb0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+     
+      <div class ="related-news-box">
+        
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/東京隱藏的藝妓世界：體驗傳統日本文化的秘密花街.html">東京隱藏的藝妓世界：體驗傳統日本文化的秘密花街</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/東京萬聖節新規出爐！澀谷、新宿嚴打街頭飲酒，遊客請注意.html">東京萬聖節新規出爐！澀谷、新宿嚴打街頭飲酒，遊客請注意</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/日本生活新手必看！專業級別的情報幫你順暢過渡，告別文化震撼和生活困擾.html">日本生活新手必看！專業級別的情報幫你順暢過渡，告別文化震撼和生活困擾</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <a href="https://www.famechos.me/"><img class="famechos-logo-footer" src="../img/famechos_logo.png"></a>
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <a href="https://www.famechos.me/k-pop.html"><p class="footer-text">K-POP</p></a>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <a href="https://www.famechos.me/j-pop.html"><p class="footer-text">J-POP</p></a>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <a href="https://www.famechos.me/drama.html"><p class="footer-text">影視</p></a>
+        </div>
+        <div class="other-footer-box footer-box">
+          <a href="https://www.famechos.me/others.html"><p class="footer-text">其他</p></a>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+     
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
