@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 11:22:19 +0800</lastBuildDate>
+  <lastBuildDate>Tue, 22 Oct 2024 14:20:55 +0800</lastBuildDate>
 
   <item>
   <title>東京秋季大盛事！煙火、海燈、萬聖節，10月份必去的10大活動</title>
@@ -43,5 +43,11 @@
   <description>在神田神社體驗傳統故事的全女性演出位於秋葉原附近的神田神社有一場必看的演出TheShow這場演出以全女性演員來慶祝傳統故事的傳承講述了平安時代著名的日本詩人小野小町的傳奇...</description>
   <category>Others</category>
   <pubDate>Sat, 12 Oct 2024 11:22:19 +0800</pubDate>
+</item><item>
+  <title>東京10月瘋狂活動！萬聖節角色扮演、貓咪愛好者市場、東京塔燭光活動等你來</title>
+  <link>https://www.famechos.me/news/東京10月瘋狂活動！萬聖節角色扮演、貓咪愛好者市場、東京塔燭光活動等你來.html</link>
+  <description>2024年10月21日至27日的東京活動。...</description>
+  <category>Others</category>
+  <pubDate>Tue, 22 Oct 2024 14:20:55 +0800</pubDate>
 </item></channel>
 </rss>
