@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Tue, 22 Oct 2024 14:15:57 +0800</lastBuildDate>
+  <lastBuildDate>Tue, 22 Oct 2024 14:20:55 +0800</lastBuildDate>
 
   <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
@@ -321,5 +321,11 @@ YG娛樂旗下的新人女團BABYMONSTER（韓語：베이비몬스터）將於1
   <description>Hanni在國會聽證會上呼籲：相互尊重，杜絕職場霸凌...</description>
   <category>K-Pop</category>
   <pubDate>Tue, 22 Oct 2024 14:15:57 +0800</pubDate>
+</item><item>
+  <title>東京10月瘋狂活動！萬聖節角色扮演、貓咪愛好者市場、東京塔燭光活動等你來</title>
+  <link>https://www.famechos.me/news/東京10月瘋狂活動！萬聖節角色扮演、貓咪愛好者市場、東京塔燭光活動等你來.html</link>
+  <description>2024年10月21日至27日的東京活動。...</description>
+  <category>Others</category>
+  <pubDate>Tue, 22 Oct 2024 14:20:55 +0800</pubDate>
 </item></channel>
 </rss>
