@@ -320,4 +320,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/東京10月瘋狂活動！萬聖節角色扮演、貓咪愛好者市場、東京塔燭光活動等你來.html</ns0:loc>
+    <ns0:lastmod>2024-10-22T14:20:55+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
